# dgm-2026.1

./: README.md
projects/EEGAN/: README.md
projects/EMGAN/: README.md
projects/Hallucinations_in_LLMs/: readme.md
projects/challenges-in-attribute-control/: README.md  gitignore  pyproject.toml
projects/challenges-in-attribute-control/colab/: run_exp3_generate.ipynb  run_exp5_recolor_smoke.ipynb  run_exp5_verify.ipynb
projects/challenges-in-attribute-control/configs/: exp3_default.yaml  objects_colors.yaml
projects/challenges-in-attribute-control/data/eval_smoke/: manifest.csv
projects/challenges-in-attribute-control/data/finetuning/candidates/: candidates_manifest.csv  candidates_manifest.csv.bak
projects/challenges-in-attribute-control/data/finetuning/canonical_extra_verified/: approved.csv
projects/challenges-in-attribute-control/experiments/: exp3_generate_eval.py  exp5_collect_laion.py  exp5_fix_manifest_paths.py  exp5_recolor_full.py  exp5_recolor_smoke.py  exp5_verify_candidates.py
projects/challenges-in-attribute-control/results/exp3_eval_generation/run_20260523_174746Z/: metadata.json
projects/challenges-in-attribute-control/src/binding/: __init__.py  io.py  sd_generator.py  seeds.py  segment_recolor.py
projects/challenges-in-attribute-control/tests/: test_sd_generator.py  test_segment_recolor.py
projects/ecgpcx-ray/: .gitignore  README.md
projects/ecgpcx-ray/models/: cvae_cnn.py
projects/ecgpcx-ray/notebooks/: 1.6-chexnet_arbiter.ipynb  1.7-classifier_test_metrics.ipynb  2.0-cyclegan_flip_rate.ipynb  2.1.1-finetune_chexnet_synthetic_cvae.ipynb  train_cvae.ipynb
projects/multimodal-pothole-detection/: .gitignore  README.md  pyproject.toml
templates/: E2-E3_template.md  E2-orientacoes.md  E3-orientacoes.md
(+17 files in other folders)
